Removed extra imports, ordered methods in the services and went through all SonalLint suggestions.